--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -36,6 +36,216 @@ The rest of the decade, 75% of
 the live music I saw was the local symphony orchestra, This was where "I got
 old", but where exactly did it happen?
 
+2013
+----
+This is probably the last year in my life where my musical taste will be
+anywhere close to "on trend." It was the last year that I attended a music
+festival, and it was the last time I got excited about a new mainstream pop
+artist. This is the end of my youth.
+
+.. image:: images/2013.jpg
+  :width: 900
+  :alt: My favorite albums from 2013
+
+.. raw:: html
+
+  <iframe
+  src="https://open.spotify.com/embed/playlist/64s1eRMAFNulP786prnhXt?theme=0" 
+  width="100%" height="380" frameBorder="0" allowtransparency="true" 
+  allow="encrypted-media"></iframe>
+
+- *Reflektor* by **The Arcade Fire** - This was the highpoint for one of the most 
+  important acts of the indie era. It isn't their best record, but it is the band
+  executing perfectly at the peak of the time in the popular consciousness. I
+  felt so smart for having listened to them since 2002. ;)
+
+- *Until In Excess, Imperceptible UFO* by **The Besnard Lakes** - There are a lot 
+  of husband/wife indie bands operating out of Canada. These guys are a hidden
+  gem in the genre. I don't know why I stopped paying attention after this,
+  which was the third great album in a row. I think it is because they stuck
+  with the same noisy post-rock meets dream pop formula and I didn't feel like I
+  needed anymore than I already had?
+
+- *Tomorrow's Harvest* by **Boards of Canada** - I kind of hope we never get 
+  another record from these guys. I want their catalog to be bookended by two
+  mysterious masterpieces. Without question I have listened to this record the
+  most out of any from this bunch. This is exactly the kind of thing I want to
+  listen to first thing in the morning, and I have dozens of times.
+
+- *The Next Day* by **David Bowie** - I was very much a fan of millennial Bowie, 
+  and I love 90s Bowie. This was the album that finally got the critics and the
+  general public back on board the Bowie train. In retrospect, I'm not sure what
+  made this better than something like *Heathen*, perhaps it was just marketed
+  better. That said, it is another extremely solid record to close out a
+  sequence where he was exploring his past sounds.
+
+- *Random Access Memories* by **Daft Punk** - This will be the last release to win
+  the Album of the Year Grammy to appear on my list. I say this not just because
+  of my "getting old" but because of trends in popular music that I do not
+  expect to ever significantly change. The way this walked a tightrope between
+  indie electronic and mainstream pop is masterful. One of the most deserving
+  albums to ever win that award.
+
+- *Sticky Wickets* by **The Duckworth Lewis Method** - Neil Hannon makes a second 
+  record about cricket with his collaborator. It's not quite as good as the
+  first one, but still way better than it seems like it should be. The best
+  track is "Judd's Paradox" which revisits the concepts and themes from the
+  first album regarding social class and cricket, and recycles the melody from a
+  **Divine Comedy** record released only a few years prior.
+
+- *Infestissumam* by **Ghost** - When I discovered this band, this was their 
+  newest release. It was their weakest record then, and still is. I almost have
+  this on my list solely for the prog metal epic "Ghuleh/Zombie Queen" which is
+  pretty much the only song from this record they bother to play live at this
+  point.
+  
+- *Pure Heroine* by **Lorde** - Around this time I was attending the "Alternative 
+  Music Film Series" at the Memorial Art Gallery, and they would play videos for
+  recent alternative hits before the feature. It was in this context that I
+  heard "Royals" for the first time, and I was a bit embarrassed by how much I
+  liked it. It didn't seem like the kind of music I should be in to. Time would
+  show that Lorde was very much the kind of music I am into. "Team" will always
+  be my Sunday morning Wegman's jam.
+
+- *Warm Blanket* by **Dent May** - For a very brief moment this guy found an
+  interesting XTC meets lounge singer sound that was indie pop gold. I can't get
+  into his new stuff, but this record is what I want to hear when I am sitting
+  on the porch sipping a cool beverage.
+
+- *New* by **Paul McCartney** - Beatle Paul starts paying attention to indie and
+  attempts to integrate what he sees into his own music. This has virtually
+  nothing to do with 2010s indie, but it is stunning. "Queenie Eye" is an
+  especially fresh and quite unexpected single. This the start of an ambitious,
+  if inconsistent late career push.
+
+- *The Electric Lady* by **Janelle Monae** - It's a huge bummer that we will never
+  get a proper end to the Cindy Mayweather epic. Monae has clearly gone in a
+  different (mildly disappointing) direction. This record does an amazing job
+  balancing modern pop idioms with dozens of ideas from the past. I really
+  wonder if we will ever see anything like this again.
+
+- *Trouble Will Find Me* by **The National** - In retrospect *High Violet* was a
+  massive pivot for these guys, and every record since has been the same low key
+  collection of dirges and love songs. It never feels as samey as it should
+  because it is so textured and delicately beautiful. "Pink Rabbits" is the
+  definitive track from this era of the band.
+
+- *Lanterns* by **Son Lux** - By far the most accessible record by Ryan Lott, and
+  that was a smart move. After the visibility his friends at NPR provided, this
+  was the record that built the fan base that would sustain his art rock
+  endeavour. "Lost It To Trying" was a clear effort to write a pop single that
+  totally worked out.
+
+- *The Raven That Refused to Sing (and Other Stories) by **Steven Wilson** - Wilson
+  was in the process of producing remasters of the **King Crimson** discography
+  when this album was made, and it shows. This is the kind of jazz influenced
+  "heavy prog" that Crimson were up to in the early 70s. The cover of this album
+  will always remind me of Lakeshore Record Exchange, a record store that was
+  walking distance from my first apartment in Rochester. They had a special
+  edition LP of this in stock for the last five years of their existence.
+
+- *Uzu* by **Yamantaka//Sonic Titan** - I discoverd this record while preparing to
+  attend the 2014 Polaris Music Prize Gala in Toronto. For several years I had
+  been streaming the gala online and had enjoyed the window it gave me
+  into the wildly experimental indie scene of 2010s Canada. It was a remarkable
+  time for Canadian music, and this band were one of the most out there acts.
+  They didn't win or even perform at the ceremony, but this was the pick of the
+  litter for me. This is theatrical, progressive metal that manages to never feel
+  cheesy, and was a real breath of fresh air.
+
+
+2014
+----
+This is it folks, the year "I got old." I do feel like I made an attempt to
+explore the new releases, and keep in touch with what was being covered in the
+remaining indie music blogs. This is the last year I kept a Spotify playlist of
+the things that I streamed for posterity. Interestingly, I feel like this is
+also the year that indie music took a big hit in popularity and more mainstream
+styles returned to prominence. That said, this is still a pretty great set of
+records. 
+
+.. image:: images/2014.jpg
+  :width: 900
+  :alt: My favorite albums from 2014
+
+.. raw:: html
+
+  <iframe
+  src="https://open.spotify.com/embed/playlist/6LX6vr3idzHiTlDmHzqWDb?theme=0" 
+  width="100%" height="380" frameBorder="0" allowtransparency="true" 
+  allow="encrypted-media"></iframe>
+
+- *Everyday Robots* by **Damon Albarn** - A delightfully minimalist record that
+  feels like a variation on his other project **The Good, the Bad, and the Queen**,
+  this is what Albarn does best. "The Selfish Giant"" was probably my favorite
+  song from this year. He doesn't get enough credit for his inventive piano
+  playing.
+  
+- *Unrepentant Geraldines* by **Tori Amos** - This is where she entered into
+  that career phase where every album is perceived as a comeback. That probably
+  says more about the press and the general public not paying attention. Those
+  in the know, understand that there has only been on sub-par Tori Amos album.
+  That said, this is return to a smaller kind of songwriting, that was a clear
+  effort to do something different. The record scared me a little at release, as
+  Tori felt like she was aging for the first time. It was as much about me as it
+  was her. Then I realized that Tori was showing her age only for effect. Her
+  voice was becoming weathered in a way that could be used for color. It was
+  just another tool in the toolbox.
+
+- *pom pom* by **Arial Pink** - It seems like everyone is converging on this
+  being the best release for this guy. It certainly is the most extreme
+  specimen, and that probably does make it the best. This is not subtle music.
+  "Picture Me Gone" is such a beautiful song and a relevant critique of social
+  media culture.
+
+- *Our Love* by **Caribou** - Another solid, understated electronic record from
+  Dan Snaith. I know this kind of music is still being made, but not nearly as
+  well as it was done here.
+
+- *Ultraviolence* by **Lana Del Rey** - I didn't take Lizzy Grant very seriously
+  until this record. I know that the production is what is pulling me in, but
+  there is some serious songwriting here as well. This was shocking at the time,
+  but it makes complete sense in retrospect with the sequence of fantastic
+  records that would follow. "Brooklyn Baby" is such a great diss track aimed at
+  the New York City hipster culture that rejected her.
+
+- *Keys* by **Hooray for Earth** - This band had a very brief but highly
+  productive run. Only 3 years after their debut EP they released their finest
+  work here. The big guitars, the strong melodies, the delicate vocals, 
+  the judicious use of electronics, and the
+  slick production that sounds increasingly like Toto. One of my favorite bands
+  of the late indie era, and their breakup almost was a signal that time was
+  over.
+  
+- *The Ambassador* by **Gabriel Kahane** - A concept album about his former home
+  of Los Angeles. This was the record where Kahane replaced Sufjan as my
+  favorite maker of "fancy folk music." He is almost going prog here on "Empire
+  Liquor Mart." The song "Villains" is great comic observation about how movies
+  and other media distort our perceptions of reality.
+
+- *Black Hours* by **Hamilton Leithouser** - When **The Walkmen** one of my
+  favorite bands of the indie era went on permanent hiatus I was bummed. I'm
+  glad this guy kept making music that was very in line with the sound of his
+  band, but with a mature sounds for his aging fans. This is a logical extension
+  of the strings and horn sound of the late Walkmen records. 
+
+- *Love Letters* by **Metronomy** - The Metronomy records can be organized into
+  two groups: The understated half-instrumental soundscapes, and the quirky pop
+  collections. This one is strongly in the latter class. "Reservoir" has become
+  one of their trademark songs, but it is only one of many pop gems here.
+
+- *This is My Hand* by **My Brightest Diamond** - A transition work between the
+  chamber pop that came before and the dance worthy tracks that would be next.
+  It is also the line between the woman who was Shara Worden but would become
+  Shara Nova.
+
+- *In Conflict* by **Owen Pallet** - The record where he perfected the formula
+  that was started with the **Final Fantasy** records. While the music is
+  feeling more refined and perfected than ever before, the lyrics are a
+  stunningly transparent account of someone who is really struggling. I'll never
+  forget seeing the artist perform "The Riverbed" at the 2014 Polaris Prize
+  Gala.
+
 2015
 ----
 I turned 35 in 2015, which sounded very old at the time. My relationship with
