--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -37,6 +37,7 @@ albums by artists I already know well.
 - *The Loves of Your Life* by **Hamilton Leithouser** - I've enjoyed each of his three
   solo records released to date, but each one sounds more and more like his old
   band *The Walkmen* and I'm not going to complain. I loved *The Walkmen*.
+  [*Memory*: Being excited there was any new music to listen to during the pandemic]
 
 - *McCartney III* by **Paul McCarney** - In the depths of early pandemic anxiety I
   was really excited to hear about the third in the series of McCarney's self
@@ -44,23 +45,30 @@ albums by artists I already know well.
   groundbreaking work. I pre-ordered on vinyl the day it was announced. It
   managed to be better than I thought it could be. I listened again when I wrote
   this, and realize I am still liking it more with each listen. It is remarkable
-  that he can make music like this at his age and career state.
+  that he can make music like this at his age and career state. [*Memory*: Hearing
+  that this existed was welcome good news in one of the roughest periods of my life]
 
 - *Tomorrows I* by **Son Lux** - Another welcome distraction in the lost year was the
   three part epic by Ryan Lott and band. The albums play out more like films in
   a trilogy than a multi-movement musical piece. This one does a great job
-  setting up the themes and concepts of the whole work.
+  setting up the themes and concepts of the whole work. [*Memory*: This was
+  released right after I moved back to Rochester]
 
 - *Tomorrows II* by **Son Lux** - If part one was A New Hope, this definitely is
   Empire Strikes Back. Everything is shaken up and broken apart. The reviews I
   saw didn't like this one. I don't think we were supposed to be comfortable. This is the
-  middle act in the trilogy when things get harsh and difficult.
+  middle act in the trilogy when things get harsh and difficult. [*Memory*:
+  Being very disappointed with this until part III resolved everything]
 
 - *The Ascension* by **Sufjan Stevens** - I'm glad that Sufjan is back to making weird
-  music, that is when he is at his best.
+  music, that is when he is at his best. [*Memory*: For some reason I listened
+  to my vinyl copy of this  for the first time while watching a video of my high 
+  school class Promenade on Facebook]
 
-- *It is What it Is* by **Thundercat** - Not as perfect at his last record *Drunk* but
-  still an amazing record on the boundaries of R&B and jazz.
+- *It is What it Is* by **Thundercat** - Not as perfect at his previous record *Drunk* but
+  still an amazing record on the boundaries of R&B and jazz. [*Memory*: I spent
+  a really long time deciding if I really needed a copy of this on vinyl,
+  apparently I did]
 
 2021
 ----
@@ -81,26 +89,46 @@ Compiling my favorites here as they happen.
   (More than a decade maybe?). Some serious prog/math rock made with an indie spirit.
   So pretty, so dense, so much to wrap your head around. The kind of music that
   only makes sense to people with hundreds of favorite records, and hand craft a
-  website to talk about them.
+  website to talk about them. [*Memory*: buying the LP online before I had even
+  heard half the album because I was so taken]
 
 - *Chemtrails Over the Country Club* by **Lana Del Rey** - *NFR* wasn't a fluke,
   but the beginning of a career on a whole new level. This is another extraordinary
   album filled with the old Lana tricks and a killer folk soul. The songwriting
   is top notch, and the performances are first rate. My favorite artist working
-  today.
+  today. [*Memory*: It had been about five years since I had heard an album on
+  vinyl for my first listen, and I was glad I saved this one]
+
+- *Blue Banisters* by **Lana Del Rey** - How is this even better than her first
+  album from 2021. How is she the most consistent artist of the current
+  generation? What is the next album going to be like? Is it coming out this
+  year too? [*Memory*: Being extremely confused about what this was when it was
+  announced a few weeks after *Chemtrails*]
   
 - *Solar Power* by **Lorde** - Yes, this is a much subtler record with less lofty
   themes and goals. We live in an age where subtlety doesn't get the credit it
   deserves. This is a great record. Don't worry, I'm sure she will be back to
-  some real melodrama someday soon.
+  some real melodrama someday soon. [*Memory*: For the second straight record I
+  hated the lead single when I heard it, but I love the album (and ended up
+  liking the lead single in time)]
+
+- *Hey What* by **Low** - When I became aware that these guys were making
+  somewhat avant garde electronic music now, I had to hear it. Sure enough the
+  beautiful harmonies were now backed by a super interesting and downright
+  pretty interpretation of minimalist industrial. Are they really Mormons?
+  Surely music this good must be sinful? [*Memory*: In a repeating theme this
+  year, I bought a vinyl copy of this midway through my first listen]
 
 - *Tomorrows III* by **Son Lux** - Continuing my Star Wars analogy from last
   year, this is most definitely "Return of the Jedi" and "Embrace" is "Yub Nub"
   brining the whole thing home with a positive vibe, looking back on the themes
-  that run through this amazing trilogy.
+  that run through this amazing trilogy. [*Memory*: Streaming this first thing
+  the morning it was released and feeling so satisfied by how the trilogy ended]
 
 - *The Future Bites* by **Steven Wilson** - I dig the sterile, anxious vibe of
   this record, even if the songs aren't universally brilliant. Certainly music
   for our current age. The singles "KING GHOST" and "PERSONAL SHOPPER" are
   killer. Who here is surprised that this guy has changed sounds again?
+  [*Memory*: The creepy video for "PERSONAL SHOPPER" is all I can think of when
+  I hear this album]
 
