--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -46,13 +46,32 @@ Section complete:
 
 Latest update: 26 Oct 2021
 
-Total Albums: 
+Total Albums: 179
 
 Top Artists:
 
+- 5 albums (2) - Beach House, Lana Del Rey
+
+- 4 albums (5) - Ariel Pink, Ghost, Son Lux, Sufjan Stevens, Steven Wilson
+
 Favorite album:
 
+*The Suburbs* by **The Arcade Fire**
+
+.. image:: Arcade_Fire_-_The_Suburbs.jpg
+  :width: 400
+  :alt: My favorite albums from 2011
+
 Favorite Song:
+
+*In Kind* by **Braids**
+
+.. raw:: html
+
+  <iframe width="698" height="393" src="https://www.youtube.com/embed/_Xk-s4fCCwc"
+  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+  clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+  allowfullscreen></iframe>
 
 2011
 ----
@@ -313,7 +332,8 @@ am savoring the process of revisiting the past.
   sat next to me. He was a somewhat intimidating figure with wild hair and an
   outlandish sense of style. I moved seats.]
 
-- *Born to Die* by **Lana Del Rey** - I liked the big single "Video Games" but
+- *Born to Die* by **Lana Del Rey (Paradise Edition)** - I liked the big single 
+  "Video Games" but
   it took a while for me to warm up to this record. It really wasn't until her
   stunning second record came out that I came back and appreciated what was
   going on here. This hip hop tinged music is very far from where she is now,
