--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -92,7 +92,7 @@ many of the releases shared a consistent sound. This was definitely the year of
 synthpop revival, chillwave and the seeds of vaporwave. 2011 has a distinct
 sound and I like it. Much of this music was designed to invoke non-specific
 memories of the 1980s. In retrospect, this music doesn't really have many
-direction connections to that decade, but it all sure sounds like 2011.
+direct connections to that decade, but it all sure sounds like 2011.
 
 .. image:: images/2011.jpg
   :width: 900
@@ -259,9 +259,113 @@ direction connections to that decade, but it all sure sounds like 2011.
   period of popular music. [*Memory*: This record was hotly anticipated by the
   Pitchfork people, but they were completely confounded by it]
 
+- *The English Riviera* by **Metronomy** - This is by far their most straight
+  forward pop record, and it lacks the instrumental experiments of most of their
+  other work. The best moments on their records tend to sound like a kid playing
+  with all the sounds on the casio, and this mood is perfected on "The Look."
+  [*Memory*: For some reason it took a while for me to warm up to this record,
+  and I only added it to my favorites about 10 years after its release]
 
+- *All Things Must Unwind* by **My Brightest Diamond** - Of all the artists
+  working in the area of pop and "fancy music" coming together, I don't know
+  that anyone does it better than Shara Nova (formerly Worden). On this album
+  she goes all the way and uses a classical chamber music ensemble as a backing
+  band (yMusic, more on them later). [*Memory*: I saw Shara live four times on
+  this album cycle, imediately before and after release at Bugjar, and twice
+  with yMusic at Music Now 2011 and Crossing Brooklyn Ferry 2012]
 
+- *Awake* by **Now Ensemble** - Straight up contemporary classical that manages
+  avoid all the screechy violin bullshit and be enjoyable. They also manage to
+  do something Mr. Holland couldn't, make electric guitar fit without seeming
+  contrived. "Change" is by far the best thing that Judd Greenstein" has ever
+  written, and the performance here is first rate. The CDs start to creep into
+  the pictures starting here. [*Memory*: Seeing these guys
+  perform at Crossing Brooklyn Ferry synchronized to the video for the track]
+  
+- *Belong* by **The Pains of Being Pure at Heart** - They pick up a bit of a
+  grunge hard edge while keeping that delightfully gentle disposition. This is
+  the kind of music that made me feel nostalgic a couple years after it was
+  released. [*Memory*: I felt compelled to collect all the 45s from their first
+  two records. I'm glad I did, they are some of the best singles from this whole
+  era. "Belong" is an especially amazing track.]
 
+- *Tomboy* by **Panda Bear** - It is strange to look back on how big *Animal
+  Collective* and their solo projects were ten years ago. I don't know that any
+  other band has dropped off the radar quite as much as they have. Some of it
+  really holds up though, and no more so that this release. It seems to answer
+  the question, "what if Brian Wilson made electronic music?". A minimalist
+  masterpiece. [*Memory*: Having an excited conversation about how great this
+  was with one of my blog colleagues while I was attending a Penn State
+  volleyball match]
+
+- *Dye it Blonde* by **Smith Westerns** - Sometimes a band seems to have one
+  amazing record in them, and immediately after release they disappear never to
+  be heard of again. This record really stood out in the 2011 indie scene with
+  its strong guitar focus and singalong choruses. Almost like T. Rex lite.
+  [*Memory*: Seeing these guys at Pitchfork 2011 was kind of remarkable, since
+  this didn't really fit the Pitchfork scene at the time]
+
+- *New History Warfare Vol 2: Judges* by **Colin Stetson** - I always wonder why
+  music this strange sometimes hits the popular consciousness, but I'm glad it
+  does. I doubt I would have found this if it had't made the NPR music scene.
+  Our bro Colin is putting microphones all over his saxophone and mixing the
+  results into percussive electronica, without any keyboards. [*Memory*: Once
+  the Spotify algorithm realized I liked this guy, it wouldn't stop playing his
+  music for me, even if it didn't really fit in with what I was looking for at
+  the time]
+
+- *We Are Rising* by **Son Lux** - This is the peak of NPRs influence over
+  popular music. The creation of this was the focus of the highly publicized
+  "Project Album". The resulting product was pretty great as well. In retrospect
+  this feels like one of the first shots fired in the fusion with the
+  contemporary classical scene. It is also a nice transitionary record between
+  the early minimalist hip hop of the first record, and the massive layered
+  sounds to come. [*Memory*: It is hard to listen to this without thinking of
+  all the making of videos NPR posted during its creation]
+
+- *Underneath the Pine* by **Toro y Moi** - Again this guy is ahead of the
+  times. He made one of the first distinctly chillwave records in the year
+  before, now he is in front of the alternative R&B movement that was the next big
+  thing. I only wish he kept making music that was this interesting. [*Memory*:
+  I blind bought this on vinyl. Spinning the record for the first time was a big
+  surprise, but a great experience]
+
+- *Grace for Drowning* by **Steven Wilson** - Wilson was producing a remaster
+  series for King Crimson at the time, and it shows. Maybe the only time someone
+  has attempted to follow *Lizard* era Crimson. A very dark and mysterious
+  record. This record made it clear **Porcupine Tree** was never coming back, if
+  he was going to make this kind of prog under his own name. "Raider II" is one
+  of the greatest prog epics of all time. [*Memory*: I actually came to this
+  music first through the live version on the Record Store Day exclusive 
+  *Catalogue / Preserve / Amass*]
+
+- *Beautiful Mechanical* by **yMusic** - Probably no group of musicians was more
+  key to the classical music incursion into pop music than these folks. This
+  album is the perfect artifact from that time. The music is mostly written by
+  artists more on the pop side of things, but the results are very much "new
+  music" for chamber ensemble. If only Sufjan could have participated, and this
+  would feel like a complete statement. [*Memory*: I supported the Kickstarter
+  to take this album the final mile and recieved a signed CD for my trouble. It
+  has signatures from the ensemble and notable figures like Ryan Lott, Annie
+  Clark, and Shara Worden. It is the perfect keepsake for a moment in musical
+  history.]
+  
+- *Glossolalia* by **Zambri** - I became aware of the Zambri sisters through
+  their participation in the **Hooray for Earth** record that came out this
+  year. I found their song "On Call" on SoundCloud when looking for things to
+  write about on the blog. It is a striking mixture of hard industrial, and New
+  Jack Swing. This whole EP is quite the stylistic grab bag also touching on
+  goth and 90s R&B. Such a wonderful musical anomaly. [*Memory*: This is the one
+  time in writing the blog I felt smart for discovering an unknown band. It
+  wouldn't be long until all the big blogs were covering this band as well]
+
+- *Conatus* by **Zola Jesus** - Goth is one of my favorite historical music
+  genres, but I hate most of the new stuff in that area. This is one of the
+  exceptions. She has made a stunning atmospheric, elecro-goth record here, with
+  some top notch vocals. Maybe the closest anyone else has come to the **Dead
+  Can Dance** mood. [*Memory*: I've always had a tenuous relationship with the
+  Pitchfork scene, but I discovered this record reading their top albums of 2011
+  list back in the day]
 
 2012
 ----
